setup/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http2
      number: 80
      protocol: HTTP
    # tls: # Breaks ACME HTTP01
    #   httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: istio-gateway
      mode: SIMPLE
  - hosts:
    - '*'
    port:
      name: mqtt-secure
      number: 8883
      protocol: TLS
    tls:
      credentialName: istio-gateway
      mode: SIMPLE
